--- a/ForFun/learnHtml.css
+++ b/ForFun/learnHtml.css
@@ -26,14 +26,27 @@ h2 {
    
 }
 
-.one {
 
-    text-align: center;
-    vertical-align: top;
+.left {
+    margin-left: 10px;
+    padding-top: 10px;
 
 }
 
-.three {
-    text-align:end;
-    vertical-align: top;
+.mid {
+   
+    text-align: center;
+    position: relative;
+    top: -40px;
+   
+}
+
+.right {
+
+    text-align: end;
+    position: relative;
+    top: -80px;
+    margin-right: 10px;
+    
+
 }
